lessen white space for profile nav and fix font-size

--- a/Frontend/src/Styles/ProfileNav.css
+++ b/Frontend/src/Styles/ProfileNav.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 5vh;
   background-color: rgb(255, 255, 255);
-  margin-top: 10vh;
+  margin-top: 9vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -16,7 +16,7 @@
 }
 
 .profile-nav ul li {
-  font-size: 1rem;
+  font-size: 0.9rem;
   color: black;
   font-family: "Manrope", sans-serif;
   font-weight: 400;
